# PCB_LABEL

./: README.md  pyproject.toml
pcb_reverse_annotator/: __main__.py  graphics_items.py  main_window.py  models.py  project_io.py
